--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.2.6",
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/fire": "^6.1.4",
